<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/my_nano_degree_apps"
        android:textSize="@dimen/my_nano_degree_apps_font_size" />


    <Button
        android:id="@+id/spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="35dp"
        android:padding="20dp"
        android:text="@string/spotify_streamer"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/scores_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="20dp"
        android:text="@string/scores_app"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/library_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="20dp"
        android:text="@string/library_app"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="20dp"
        android:text="@string/build_it_bigger"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="20dp"
        android:text="@string/xyz_reader"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/capstone_my_own_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="20dp"
        android:text="@string/capstone_my_own_app"
        android:textSize="@dimen/button_font_size" />
</LinearLayout>
